@@ -1,13 +1,10 @@
 import javafx.application.Application;
-import javafx.application.Platform;
 import javafx.embed.swing.SwingFXUtils;
 import javafx.event.Event;
-import javafx.event.EventHandler;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Cursor;
 import javafx.scene.ImageCursor;
-import javafx.scene.Node;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
@@ -29,7 +26,7 @@ import java.io.*;
 import java.util.*;
 
 public class PathFinder extends Application {
-    private final ListGraph<String> graph = new ListGraph<>();
+    private ListGraph<String> graph = new ListGraph<>();
     private final Map<String, Circle> locations = new HashMap<>();
     private final BorderPane root = new BorderPane();
 
@@ -48,33 +45,50 @@ public class PathFinder extends Application {
     private final MenuItem saveImage = new MenuItem("Save Image");
     private final MenuItem exit = new MenuItem("Exit");
 
-    private Image mapImage;
+    private final Image mapImage = new Image("file:europa.gif");
+    private final ImageView view = new ImageView(mapImage);
     private boolean saved = true;
     private final List<Circle> placesClicked = new ArrayList<>();
     private final List<String> namesClicked = new ArrayList<>();
 
     @Override
     public void start(Stage stage) {
-        //header pane
-        VBox vBox = setMenuBar(menuBar);
-        vBox.prefWidthProperty().bind(stage.widthProperty());
+        root.setId("outputArea");
+        menuBar.setId("menu");
+        menu.setId("menuFile");
+        newMap.setId("menuNewMap");
+        open.setId("menuOpenFile");
+        save.setId("menuSaveFile");
+        saveImage.setId("menuSaveImage");
+        exit.setId("menuExit");
+        btnFindPath.setId("btnFindPath");
+        btnChangeConnection.setId("btnChangeConnection");
+        btnNewPlace.setId("btnNewPlace");
+        btnShowConnection.setId("btnShowConnection");
+        btnNewConnection.setId("btnNewConnection");
 
-        FlowPane header = new FlowPane(vBox);
+        //header pane
+        VBox vbox = setMenuBar(menuBar);
+        vbox.prefWidthProperty().bind(stage.widthProperty());
+
+        FlowPane header = new FlowPane(vbox);
         header.setAlignment(Pos.TOP_LEFT);
 
         //buttons pane
-        HBox hBox = new HBox(btnFindPath, btnShowConnection, btnNewPlace, btnNewConnection, btnChangeConnection);
-        hBox.setSpacing(10);
-        FlowPane buttons = new FlowPane(hBox);
+        HBox hbox = new HBox(btnFindPath, btnShowConnection, btnNewPlace, btnNewConnection, btnChangeConnection);
+        hbox.setSpacing(10);
+        FlowPane buttons = new FlowPane(hbox);
         buttons.setAlignment(Pos.TOP_CENTER);
 
         //create new map | menu item event
         newMap.setOnAction(event -> {
-            checkSaved();
-            CreateNewMap();
             saved = false;
-            stage.setHeight(root.getPrefHeight());
-            stage.setY(0);
+            if(checkSaved()){
+                createNewMap();
+                saveMap();
+                stage.setHeight(root.getPrefHeight());
+                stage.setY(0);
+            }
         });
 
         //open graph | menu item event
@@ -104,7 +118,7 @@ public class PathFinder extends Application {
 
         //exit application | menu item event
         exit.setOnAction(event -> {
-            checkSaved();
+            stage.fireEvent(new WindowEvent(stage, WindowEvent.WINDOW_CLOSE_REQUEST));
         });
 
 
@@ -146,6 +160,7 @@ public class PathFinder extends Application {
         //set borderpane
         root.setTop(header);
         root.setCenter(buttons);
+        root.setBottom(view);
 
         //set scene
         Scene scene = new Scene(root);
@@ -157,35 +172,21 @@ public class PathFinder extends Application {
 
     private VBox setMenuBar(MenuBar menuBar){
         //set vbox and add menubar
-        VBox vBox = new VBox(menuBar);
-
-        //set menu id's
-        menuBar.setId("menu");
-        menu.setId("menuFile");
-        newMap.setId("menuNewMap");
-        open.setId("menuOpen");
-        save.setId("menuSave");
-        saveImage.setId("menuSaveImage");
-        exit.setId("menuExit");
+        VBox vbox = new VBox(menuBar);
 
         //put menu items in menu, then menubar
         menu.getItems().addAll(newMap, open, save, saveImage, exit);
         menuBar.getMenus().addAll(menu);
 
-        return vBox;
+        return vbox;
     }
 
     //creates new map/image
-    private void CreateNewMap(){
-        try{
-            FileInputStream file = new FileInputStream("europa.gif");
-            mapImage = new Image(file);
-            ImageView view = new ImageView(mapImage);
-            root.setBottom(new FlowPane(view));
-            root.prefHeightProperty().bind(mapImage.heightProperty());
-        } catch (FileNotFoundException e){
-            System.err.println("Cause of file not found exception: " + e.getCause());
+    private void createNewMap() {
+        for(String node : graph.getNodes()){
+            graph.remove(node);
         }
+        root.prefHeightProperty().bind(mapImage.heightProperty());
     }
 
     //saves map | not done
@@ -201,7 +202,22 @@ public class PathFinder extends Application {
                 writer.write(key + ";" + locations.get(key).getCenterX() + ";" + locations.get(key).getCenterY() + ";");
             }
             writer.newLine();
-            writer.write(graph.toString());
+            String graphText = graph.toString();
+            String fileText = "";
+            Scanner scanner = new Scanner(graphText);
+            while(scanner.hasNextLine()){
+                String[] items = scanner.nextLine().split(";");
+                if(items.length > 0){
+                    String node = items[0];
+                    for(int i = 1; i < items.length; i++){
+                        String destination = items[i].split(" ")[1];
+                        String weight = items[i].split(" ")[5];
+                        fileText += node + ";" + destination + ";" + weight + "\n";
+                    }
+                }
+                writer.write(fileText);
+                writer.close();
+            }
         } catch (FileNotFoundException e) {
             System.err.println("Cause of file not found exception: " + e.getCause());
         } catch (IOException e) {
@@ -241,12 +257,12 @@ public class PathFinder extends Application {
     private void setNewConnection(Pair<String, String> pair){
         String nameText = pair.getKey();
         String timeText = pair.getValue();
-        graph.connect(namesClicked.getFirst(), namesClicked.getLast(), nameText, Integer.parseInt(timeText));
+        graph.connect(namesClicked.get(0), namesClicked.get(1), nameText, Integer.parseInt(timeText));
         Line connection = new Line();
-        connection.setStartX(placesClicked.getFirst().getCenterX());
-        connection.setStartY(placesClicked.getFirst().getCenterY());
-        connection.setEndX(placesClicked.getLast().getCenterX());
-        connection.setEndY(placesClicked.getLast().getCenterY());
+        connection.setStartX(placesClicked.get(0).getCenterX());
+        connection.setStartY(placesClicked.get(1).getCenterY());
+        connection.setEndX(placesClicked.get(0).getCenterX());
+        connection.setEndY(placesClicked.get(1).getCenterY());
         connection.setStroke(Color.BLACK);
         connection.setStrokeWidth(4);
 
@@ -274,7 +290,6 @@ public class PathFinder extends Application {
             super(item);
             setPadding(new Insets(10));
             setAlignment(Pos.CENTER);
-            setId("btn" + item.replaceAll(" ", ""));
         }
     }
 
@@ -286,13 +301,13 @@ public class PathFinder extends Application {
         Dialog<Pair<String, String>> dialog = new Dialog<>();
         dialog.setTitle("Connection");
 
-        Edge<String> edge = graph.getEdgeBetween(namesClicked.getFirst(), namesClicked.getLast());
+        Edge<String> edge = graph.getEdgeBetween(namesClicked.get(0), namesClicked.get(1));
         if(edge != null){
             transportation = edge.getName();
             transportationTime = Integer.toString(edge.getWeight());
         }
 
-        dialog.setHeaderText("Connection from " + namesClicked.getFirst()+ " to " + namesClicked.getLast());
+        dialog.setHeaderText("Connection from " + namesClicked.get(0)+ " to " + namesClicked.get(1));
 
         dialog.getDialogPane().getButtonTypes().addAll(ButtonType.OK, ButtonType.CANCEL);
 
@@ -328,7 +343,7 @@ public class PathFinder extends Application {
             return null;
         });
 
-        if(!graph.pathExists(namesClicked.getFirst(), namesClicked.getLast()))
+        if(!graph.pathExists(namesClicked.get(0), namesClicked.get(1)))
             dialog.showAndWait().ifPresent(this::setNewConnection);
         else
             dialog.show();
@@ -337,20 +352,20 @@ public class PathFinder extends Application {
     }
 
     private void resetCircles(){
-        placesClicked.getFirst().setFill(Color.RED);
-        placesClicked.getLast().setFill(Color.RED);
-        placesClicked.removeFirst();
-        placesClicked.removeLast();
-        namesClicked.removeFirst();
-        namesClicked.removeLast();
+        placesClicked.get(0).setFill(Color.RED);
+        placesClicked.get(1).setFill(Color.RED);
+        placesClicked.remove(0);
+        placesClicked.remove(1);
+        namesClicked.remove(0);
+        namesClicked.remove(1);
     }
 
     private void findPath(){
         Alert box = new Alert(Alert.AlertType.INFORMATION);
-        box.setHeaderText("The path from " + namesClicked.getFirst() + " to " + namesClicked.getLast() + ":");
+        box.setHeaderText("The path from " + namesClicked.get(0) + " to " + namesClicked.get(1) + ":");
         String context = "";
         int total = 0;
-        for(Edge<String> edge : graph.getPath(namesClicked.getFirst(), namesClicked.getLast())){
+        for(Edge<String> edge : graph.getPath(namesClicked.get(0), namesClicked.get(1))){
             context += edge.toString() + "\n";
             total += edge.getWeight();
         }
@@ -359,7 +374,7 @@ public class PathFinder extends Application {
     }
 
     private void openGraph() {
-        CreateNewMap();
+        createNewMap();
         try {
             FileReader rd = new FileReader("europa.graph");
             BufferedReader reader = new BufferedReader(rd);
@@ -402,6 +417,7 @@ public class PathFinder extends Application {
         label.setTranslateX(x + 2);
         label.setTranslateY(y + 15);
         label.setFont(Font.font("Arial", FontWeight.EXTRA_BOLD,10));
+        label.setId(name);
         root.getChildren().add(circle);
         root.getChildren().add(label);
         graph.add(name);
@@ -439,19 +455,8 @@ public class PathFinder extends Application {
         return true;
     }
 
-    private void deleteFile(){
-        try{
-            new FileWriter("europa.graph", false).close();
-
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
     private void closeWindowEvent(WindowEvent event){
-        if(checkSaved()){
-            deleteFile();
-        } else {
+        if(!checkSaved()){
             event.consume();
         }
     }
